--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "pdfmake": "^0.2.7",
     "primeng": "^14.2.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
