--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@swimlane/ngx-charts": "^20.1.2",
+    "html2canvas": "^1.4.1",
     "ng-recaptcha": "^10.0.0",
     "pdfmake": "^0.2.7",
     "primeng": "^14.2.1",
